syntax = "proto3";

option csharp_namespace = "CommerceFlow.Protobufs";

import "error.proto";

message UserLocation {
  string address = 1;
  string city = 2;
}

message UserResponse{
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
  UserLocation location = 6;
}

message AuthenticateRequest{
	string email = 1;
	string password = 2;
}

message AuthenticateResponse{
	oneof response {
		UserResponse user = 1;
		Error error = 2;
	}
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  oneof response {
	  int32 id = 1;
	  Error error = 2;
  }
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  UserLocation location = 7;
}

message UpdateUserResponse {
  oneof response {
	  bool is_success = 1;
	  Error error = 2;
  }
}

message UpdatePasswordRequest {
  string email = 1;
  string password = 2;
}

message UpdatePasswordResponse {
	bool is_success = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  oneof response {
	  bool is_success = 1;
	  Error error = 2;
  }}

message GetUserRequest{
  int32 id = 1;
}

message GetUserResponse{
  oneof response {
	  UserResponse user = 1;
	  Error error = 2;
  }
}


message UsersResponse{
	repeated UserResponse users = 1;
}